# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  engine.py  meta.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  meta.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
