[tool.poetry]
name = "sscream_brain_games"
version = "0.1.0"
description = "First python project on hexlet"
authors = ["Sergey Sakirko <ssakirko@mail.ru>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
