[tool.poetry]
name = "sscream_brain_games"
version = "0.3.3"
description = "Brain games project on hexlet"
authors = ["Sergey Sakirko <ssakirko@mail.ru>"]
repository="https://github.com/sscream/python-project-lvl1"
packages = [
    { include = "brain_games" },
]
classifiers = [
    "Topic :: Education"
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
